--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node server.js"
   },
-  "engines" : { 
-    "node" : "^10.15.0",
-    "npm" : "^6.0.0" 
+  "engines": {
+    "node": "^10.15.0",
+    "npm": "^6.0.0"
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
@@ -18,10 +18,11 @@
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
+    "mongoose": "^5.4.10",
     "morgan": "~1.9.0",
     "popper.js": "^1.14.6"
   },
-  "description": "Express Generator Demo",
+  "description": "Mongoose",
   "main": "server.js",
   "author": "Tom Tsiliopoulos",
   "license": "ISC",
@@ -29,7 +30,16 @@
     "@types/body-parser": "^1.17.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.3.12",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.18"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ifavhoney/COMP308-W2019-Lesson4B.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Ifavhoney/COMP308-W2019-Lesson4B/issues"
+  },
+  "homepage": "https://github.com/Ifavhoney/COMP308-W2019-Lesson4B#readme"
 }
