--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "hacking-health",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "supporting-caregivers",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/ethienni/Supporting-Caregivers.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ethienni/Supporting-Caregivers/issues"
-  },
-  "homepage": "https://github.com/ethienni/Supporting-Caregivers#readme",
   "dependencies": {
-    "express": "^4.16.4",
-    "mongodb": "^3.2.2"
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0"
   }
 }
