--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "jsonwebtoken": "^8.5.1",
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "mongoose": "^5.4.11",
     "morgan": "~1.9.0",
     "popper.js": "^1.14.6"
+  },
+  "engines": {
+    "node": "^10.15.0",
+    "npm": "^6.0.0"
   },
   "description": "Mongoose",
   "main": "server.js",
